Update readme with SOPs

--- a/README.html
+++ b/README.html
@@ -357,6 +357,10 @@ display: none;
 northern bobwhite</h1>
 <p>This is a working repository for the analysis of Bobwhite quail
 (<em>Colinus virginianus</em>) habitat suitability and connectivity.</p>
+<p><strong>Repository maintainer(s):</strong></p>
+<p>Patrick Freeman, Scientist, Conservation Science Partners, Inc.</p>
+<p>Justin Suraci, Lead Scientist, Conservation Science Partners,
+Inc.</p>
 <hr />
 <p><strong>For repository contributors:</strong></p>
 <p>The suggested workflow for the time being is as follows:</p>
@@ -364,17 +368,74 @@ northern bobwhite</h1>
 <li>Fork this repository into your own GitHub account.</li>
 <li>Clone the repository onto your local machine.</li>
 <li>Create a branch on which you’ll work on a specific task
-(e.g. writing code for SDM modeling)</li>
+(e.g. writing code for SDM modeling).</li>
 <li>Make your changes, add code, etc.</li>
 <li>Stage a commit to capture changes.</li>
 <li>Push your changes up to GitHub.</li>
 <li>Submit a pull request to the ‘main’ repo with a detailed description
 of changes.</li>
-<li>Review pull requests and merge into ‘main’ repo.</li>
+<li>Review pull requests and merge into ‘main’ repo (Admins only).</li>
 </ol>
 <p>Detailed guides on how to do this both <a href="https://docs.github.com/en/get-started/quickstart/contributing-to-projects">via
 command line</a> and using the <a href="https://docs.github.com/en/desktop/contributing-and-collaborating-using-github-desktop/adding-and-cloning-repositories/cloning-and-forking-repositories-from-github-desktop">GitHub
 Desktop client</a> are available.</p>
+<p><strong>Suggested Standard Operating Procedures (SOPs) related to
+file and code management:</strong></p>
+<p>We are focused on making the workflows that emerge from this project
+(relatively) easily reproducible. Although everyone has their own way of
+coding - we would like to suggest some minimal set of standard
+filenaming and formatting to help current and future users.</p>
+<p><strong><em>File Organization</em></strong></p>
+<p>We will use GitHub primarily as a place for tracking code and
+processes and not for data storage. You are welcome to create your own
+data storage folder structure and we will work toward a more formalized
+data management system as the project evolves.</p>
+<p>While the ultimate organization of the repo is likely to evolve over
+time we request that all code (inclusive of R code, notebooks, etc.) is
+kept within the ‘code’ folder. Additional sub-folders can be created in
+your branch and can be added to the ‘main’ repository through pull
+requests over time.</p>
+<p>A note on the ‘utils’: Often, we write many small scripts that house
+particular functions, carry out useful data processing steps, or are
+otherwise auxiliary to the major tasks at hand. They are nevertheless
+extremely important to document! The ‘utils’ folder is a useful place to
+store these kinds of scripts and their documented functions - see the
+next section for suggested documentation templates.</p>
+<p><strong><em>Script and Notebook Naming</em></strong></p>
+<p>All code (inclusive of R code, R notebooks, Jupyter/Colab notebooks)
+should be given informative names using all lowercase with spaces
+represented using the ‘-’ dash.</p>
+<p>Example: prep-norbo-range-maps.R</p>
+<p>For R scripts in particular, please use the following header to
+provide a minimal collection of documentation:</p>
+<pre class="{r}"><code>## ---------------------------
+##
+## Script name: 
+##
+## Purpose of script:
+##
+## Author: 
+##
+## Date Created: 
+## Date last modified:
+##
+## Email: 
+##
+## ---------------------------
+##
+## Notes:
+## 
+##
+## ---------------------------</code></pre>
+<p>Scripts written in Jupyter/Colab notebooks should use equivalent
+headers.</p>
+<p><strong><em>Documenting workflows</em></strong></p>
+<p>For the time being, we are using a <a href="https://docs.google.com/document/d/1yPoX90D-3GDC4uxYxkjF8r4zELiCaKERMUydKMRVBDs/edit#heading=h.nujcvc9bj98v">document
+here</a> to capture decisions made by the project team regarding data
+sourcing, processing, and modeling to ease the construction of
+transparent and reproducible methods and workflows. Please make sure to
+document your processes (including with links to necessary scripts) in
+this document.</p>
 <p>If you have any questions, concerns, or issues, let’s talk about
 them!</p>
 </div>
