update covariate table

--- a/README.html
+++ b/README.html
@@ -520,14 +520,14 @@ Cloud Storage bucket</a>.</strong></p>
 <p><strong>The script used to extract covariate values to 5-km grid
 cells and assemble them for habitat suitability modeling is
 here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-covariate-grid-assembly.R">bobwhite-covariate-grid-assembly.R</a></p>
-<table style="width:99%;">
+<table style="width:100%;">
 <colgroup>
-<col width="7%" />
-<col width="22%" />
-<col width="17%" />
-<col width="3%" />
 <col width="9%" />
-<col width="39%" />
+<col width="29%" />
+<col width="22%" />
+<col width="4%" />
+<col width="12%" />
+<col width="21%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -536,7 +536,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <th>Source</th>
 <th>Date</th>
 <th>Native Resolution</th>
-<th><strong>Script(s) used for derivation</strong></th>
+<th>Script(s) used for derivation</th>
 </tr>
 </thead>
 <tbody>
@@ -546,7 +546,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>ALOS Global DSM (AW3D)</td>
 <td>2021</td>
 <td>30m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="even">
 <td>Topography</td>
@@ -554,7 +554,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>ALOS Global DSM (AW3D)</td>
 <td>2021</td>
 <td>30m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="odd">
 <td>Topography</td>
@@ -562,7 +562,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>ALOS Global DSM (AW3D)</td>
 <td>2021</td>
 <td>30m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="even">
 <td>Climate</td>
@@ -570,7 +570,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>NASA Daymet V4</td>
 <td>2016-2021</td>
 <td>1000m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="odd">
 <td>Climate</td>
@@ -578,7 +578,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>NASA Daymet V4</td>
 <td>2016-2021</td>
 <td>1000m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="even">
 <td>Climate</td>
@@ -586,7 +586,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>SNODAS</td>
 <td>2016-2021</td>
 <td>1000m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/utils/snow-depth-days-covariate-construction.R">snow-depth-days-covariate-construction.R</a></td>
+<td>snow-depth-days-covariate-construction.R</td>
 </tr>
 <tr class="odd">
 <td>Land cover</td>
@@ -594,7 +594,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>Rangeland Analysis Platform</td>
 <td>2016-2021</td>
 <td>30m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="even">
 <td>Land cover</td>
@@ -602,7 +602,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>Rangeland Analysis Platform</td>
 <td>2016-2021</td>
 <td>30m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="odd">
 <td>Land cover</td>
@@ -610,7 +610,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>Rangeland Analysis Platform</td>
 <td>2016-2021</td>
 <td>30m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="even">
 <td>Land cover</td>
@@ -618,7 +618,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>Rangeland Analysis Platform</td>
 <td>2016-2021</td>
 <td>30m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="odd">
 <td>Land cover</td>
@@ -626,7 +626,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>National Land Cover Dataset (NLCD)</td>
 <td>2016, 2019</td>
 <td>30m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="even">
 <td>Land cover</td>
@@ -634,7 +634,7 @@ here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bo
 <td>National Land Cover Dataset (NLCD)</td>
 <td>2016, 2019</td>
 <td>30m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="odd">
 <td>Landscape structure</td>
@@ -643,8 +643,7 @@ grass</td>
 <td>This study</td>
 <td>2016-2019</td>
 <td>270m</td>
-<td><p><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/utils/geodiv-parallel-calculations.R">geodiv-parallel-calculations.R</a></p>
-<p><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/utils/mosaic-gradient-rasters.R">mosaic-gradient-rasters.R</a></p></td>
+<td>geodiv-parallel-calculations.R mosaic-gradient-rasters.R</td>
 </tr>
 <tr class="even">
 <td>Landscape structure</td>
@@ -652,8 +651,7 @@ grass</td>
 <td>This study</td>
 <td>2016-2019</td>
 <td>270m</td>
-<td><p><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/utils/geodiv-parallel-calculations.R">geodiv-parallel-calculations.R</a></p>
-<p><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/utils/mosaic-gradient-rasters.R">mosaic-gradient-rasters.R</a></p></td>
+<td>geodiv-parallel-calculations.R mosaic-gradient-rasters.R</td>
 </tr>
 <tr class="odd">
 <td>Land use and disturbance</td>
@@ -661,7 +659,7 @@ grass</td>
 <td>Suraci et al. 2023</td>
 <td>2016</td>
 <td>250m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="even">
 <td>Land use and disturbance</td>
@@ -669,7 +667,7 @@ grass</td>
 <td>Suraci et al. 2023</td>
 <td>2016</td>
 <td>250m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-sdm-covariate-construction.ipynb">bobwhite-sdm-covariate-construction.ipynb</a></td>
+<td>bobwhite-sdm-covariate-construction.ipynb</td>
 </tr>
 <tr class="odd">
 <td>Land use and disturbance</td>
@@ -678,7 +676,7 @@ Program practices</td>
 <td>USDA</td>
 <td>2017</td>
 <td>Polygon data rasterized at 5000m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/utils/crp-acreage-raster-construction.R">crp-acreage-raster-construction.R</a></td>
+<td>crp-acreage-raster-construction.R</td>
 </tr>
 <tr class="even">
 <td>Land use and disturbance</td>
@@ -686,7 +684,7 @@ Program practices</td>
 <td>USDA</td>
 <td>2017</td>
 <td>Polygon data rasterized at 5000m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/utils/average-farm-size-raster-construction.R">average-farm-size-raster-construction.R</a></td>
+<td>average-farm-size-raster-construction.R</td>
 </tr>
 <tr class="odd">
 <td>Land use and disturbance</td>
@@ -694,7 +692,7 @@ Program practices</td>
 <td>Monitoring Trends in Burn Severity (MTBS) Interagency Program</td>
 <td>2006-2021</td>
 <td>Polygon data rasterized at 5000m</td>
-<td><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/utils/mtbs-rasterization.R">mtbs-rasterization.R</a></td>
+<td>mtbs-rasterization.R</td>
 </tr>
 </tbody>
 </table>
