Update link to deliverables in ReadMe

--- a/README.html
+++ b/README.html
@@ -383,7 +383,10 @@ multi-pronged strategy for reversing bobwhite declines. </p>
 <p><a href="https://storage.cloud.google.com/pf-bobwhite-deliverables/00-FINAL-DELIVERABLES/CSP-NOBO-Connectivity-TechReport-July2023.pdf">A
 full Technical Report that includes additional methodological details is
 available in a Google Cloud Storage bucket</a>. Access can be provided
-upon reasonable request.</p>
+upon reasonable request. Final deliverables for this project, including
+rasters for the habitat suitability and connectivity models are also
+stored in <a href="https://console.cloud.google.com/storage/browser/pf-bobwhite-deliverables/00-FINAL-DELIVERABLES?project=pf-bobwhite&amp;pageState=(%22StorageObjectListTable%22:(%22f%22:%22%255B%255D%22))&amp;prefix=&amp;forceOnObjectsSortingFiltering=false">this
+bucket</a>.</p>
 <div id="analysis-framework" class="section level2">
 <h2>Analysis framework</h2>
 <p>We used count data from eBird, the Cornell Lab of Ornithology’s
