Added last update to header

--- a/README.html
+++ b/README.html
@@ -361,6 +361,7 @@ Northern Bobwhite</h1>
 <p>Patrick Freeman, Scientist, Conservation Science Partners, Inc.</p>
 <p>Justin Suraci, Senior Scientist, Conservation Science Partners,
 Inc.</p>
+<p>Last Update: 08/01/23</p>
 <hr />
 </div>
 <div id="overview" class="section level1">
