--- a/README.html
+++ b/README.html
@@ -525,14 +525,14 @@ Cloud Storage bucket</a>.</strong></p>
 <p><strong>The script used to extract covariate values to 5-km grid
 cells and assemble them for habitat suitability modeling is
 here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-covariate-grid-assembly.R">bobwhite-covariate-grid-assembly.R</a></p>
-<table style="width:100%;">
+<table>
 <colgroup>
-<col width="16%" />
-<col width="16%" />
-<col width="16%" />
-<col width="16%" />
-<col width="16%" />
-<col width="16%" />
+<col width="4%" />
+<col width="13%" />
+<col width="34%" />
+<col width="1%" />
+<col width="5%" />
+<col width="40%" />
 </colgroup>
 <thead>
 <tr class="header">
