--- a/README.html
+++ b/README.html
@@ -446,7 +446,7 @@ count data. Each of the stops is associated with a noise index
 (excluding car noise) and number of cars during survey time that can be
 used to model factors that impact detection probabilities.</p>
 <p><strong>The script use for pre-processing the BBS data is
-here:</strong></p>
+here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/processing-ebird-and-bbs-datasets.R">processing-ebird-and-bbs-datasets.R</a></p>
 <p><em>eBird Data</em></p>
 <p>We used data from the October 2022 release of the eBird Basic Dataset
 (EBD). The EBD is organized into “checklists”, semi-structured surveys
@@ -494,8 +494,10 @@ we also retained information including the duration (in minutes),
 distance traveled (in km), survey type (stationary or traveling), and
 the number of observers that were used to model detection
 probabilities.</p>
-<p><strong>The script for pre-processing the eBird dataset is here:
-xxxx</strong></p>
+<p><strong>The script(s) for pre-processing the eBird dataset are
+here:<br />
+</strong><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/grid-summarize-ebird-data.R">grid-summarize-ebird-data.R</a><strong><br />
+</strong><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/processing-ebird-and-bbs-datasets.R">processing-ebird-and-bbs-datasets.R</a></p>
 </div>
 <div id="input-data-summarization" class="section level5">
 <h5><strong>Input data summarization</strong></h5>
@@ -508,8 +510,8 @@ EBD, we calculated the number of complete eBird checklists per 5-km x
 checklists (number of checklists per grid cell = 1-1,451) and the total
 number of northern bobwhite detections (number of detections =
 0-30).</p>
-<p><strong>The script use for preparing location data inputs is here:
-xxxxxx</strong></p>
+<p><strong>The script use for preparing location data inputs is
+here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/processing-ebird-and-bbs-datasets.R">processing-ebird-and-bbs-datasets.R</a></p>
 </div>
 </div>
 <div id="environmental-covariates" class="section level4">
@@ -527,12 +529,12 @@ cells and assemble them for habitat suitability modeling is
 here:</strong> <a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/bobwhite-covariate-grid-assembly.R">bobwhite-covariate-grid-assembly.R</a></p>
 <table>
 <colgroup>
-<col width="4%" />
 <col width="13%" />
-<col width="34%" />
-<col width="1%" />
-<col width="5%" />
-<col width="40%" />
+<col width="13%" />
+<col width="21%" />
+<col width="13%" />
+<col width="13%" />
+<col width="25%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -728,8 +730,11 @@ ultimate output of this suitability model was an estimate of the
 relative density of bobwhite in each grid cell. For a full description
 of the model structure is provided in the project’s <a href="https://storage.cloud.google.com/pf-bobwhite-deliverables/00-FINAL-DELIVERABLES/CSP-NOBO-Connectivity-TechReport-July2023.pdf">Technical
 Report</a>.</p>
-<p><strong>The script used to fit the hierarchical Bayesian model is
-here:</strong> xxxxx</p>
+<p><strong>The scripts used to fit the hierarchical Bayesian model are
+here:</strong><br />
+<a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/sdm/IntegratedJAGSModel.R">IntegratedJAGSModel.R</a><br />
+<a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/sdm/model.txt">model.txt</a></p>
+<p><a href="https://github.com/csp-inc/pf-bobwhite/blob/main/code/sdm/PredictionMap.R">PredictionMap.R</a></p>
 </div>
 </div>
 <div id="connectivity-modeling" class="section level3">
